manifest/k8s_namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nearmi
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx

---
