manifest/k8s_app_postgres.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: nearmi
  labels:
    app: postgres
spec:
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: nearmi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres-db
        image: postgres:latest
        ports:
        volumeMounts:
          - name:  pgdata
            mountPath: /var/lib/postgresql/data
      volumes:
        - name:  pgdata
          persistentVolumeClaim:
            claimName: postgres-pvc
