manifest/k8s_app_back.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nearmi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-user
  namespace: nearmi
spec:
  rules:
    - host: 'ingress.nearmi'
      http:
        paths:
          - path: /api/user
            pathType: Prefix
            backend:
              service:
                name: api-user-svc
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-shop
  namespace: nearmi
spec:
  rules:
    - host: 'ingress.nearmi'
      http:
        paths:
          - path: /api/shop
            pathType: Prefix
            backend:
              service:
                name: api-shop-svc
                port:
                  number: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: api-user-svc
  namespace: nearmi
  labels:
    app: api
spec:
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    app: api
---
apiVersion: v1
kind: Service
metadata:
  name: api-shop-svc
  namespace: nearmi
  labels:
    app: api
spec:
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
  selector:
    app: api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: nearmi
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      hostAliases:
        - ip: '51.77.144.88'
          hostnames:
            - 'nearmi.registry'
            - 'cluster.nearmi-dev'
      containers:
        - name: api-user
          image: 'nearmi.registry/nearmi/user:0.1.0'
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
          readinessProbe:
            httpGet:
              path: /api/actuator/health
              port: 8000
        - name: api-shop
          image: 'nearmi.registry/nearmi/shop:0.1.0'
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8001
          volumeMounts:
            - name:  nearmi-data
              mountPath: /nearmi/data
          readinessProbe:
            httpGet:
              path: /api/shop/actuator/health
              port: 8001
      volumes:
        - name:  nearmi-data
          persistentVolumeClaim:
            claimName: api-pvc
      imagePullSecrets:
        - name: regcred
---
